@@ -2077,6 +2077,20 @@ Druids also gain experience for placing their plants inside areas classified as 
 cities.  A certain number of plants per city per mud-month can be summoned for experience \
 in this way.
 
+NAVAL_TACTICS=SKILL_NAVALTACTICS
+NTACTICS=SKILL_NAVALTACTICS
+NAVALTACTICS=SKILL_NAVALTACTICS
+SKILL_NAVALTACTICS=<ABILITY>\
+Usage    : NAVALTACTICS [TACTIC] \n\r\
+Example  : ntactics follow\n\r\
+From the deck of a big sailing ship, and during ship combat, the sailor can \
+automatically set a course on his or her ship according to a particular \
+combat tactic.  The tactics include:\n\r\
+FOLLOW - Maintain a distance from the enemy ship equal to the current distance.\n\r\
+RETREAT - Maintain a distance just outside the enemy ships gun range.\n\r\
+FLEE - Flee from combat by sailing towards the closest escape route.\n\r\
+APPROACH - Get as close as possible to the enemy ship.
+
 THIEF_NONDETECTION=NONDETECTION
 NONDETECTION=<ABILITY>\
 Example  : \n\r\
